--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,50 @@
 .navbar {
-    
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .logo{
+        display: flex;
+        align-items: center;
+        font-weight: bold;
+        gap: 10px;
+    }
+
+    .icons{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        .notifications{
+            position: relative;
+            span{
+                background-color: red;
+                color: white;
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 12px;
+            }
+        }
+        .user{
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            img{
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            object-fit: cover;  
+            }
+            
+        }
+    }
 }
